--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
+import BetaPopup from '../components/BetaPopup.astro';
 import { getLanguageFromURL } from '../i18n/utils';
 
 interface Props {
@@ -73,6 +74,7 @@ const imageUrl = new URL(image.startsWith('http') ? image : image, siteUrl).toSt
       <slot />
     </main>
     <Footer lang={lang} />
+    <BetaPopup />
   </body>
 </html>
 
